# bp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
CMakeModules/: FindBP.cmake  FindBPScene.cmake  FindBPView.cmake  FindVulkan.cmake  Findbp.cmake  FindbpMulti.cmake  FindbpQt.cmake  FindbpScene.cmake  FindbpView.cmake  Findshaderc.cmake
bp/include/: vk_mem_alloc.h
bp/include/bp/: Allocation.h  AsyncQueue.h  Attachment.h  Buffer.h  BufferDescriptor.h  CPUSemaphore.h  CommandPool.h  CompositeRenderer.h  Compositor.h  ComputePipeline.h  Context.h  DepthAttachment.h  DepthStencilAttachment.h  Descriptor.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  DeviceQuery.h  DeviceRequirements.h  Event.h  ExternalMemory.h  Fence.h  FlagSet.h  Framebuffer.h  GraphicsPipeline.h  Image.h  ImageAttachment.h  ImageDescriptor.h  ImageTarget.h  Instance.h  Memory.h  MemoryAllocator.h  OffscreenFramebuffer.h  Pipeline.h  PipelineLayout.h  Pointer.h  Queue.h  RenderPass.h  RenderTarget.h  (+7 more)
bp/src/: Allocation.cpp  Buffer.cpp  CommandPool.cpp  CompositeRenderer.cpp  Compositor.cpp  ComputePipeline.cpp  Context.cpp  DepthAttachment.cpp  DepthStencilAttachment.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Device.cpp  DeviceQuery.cpp  DeviceRequirements.cpp  Event.cpp  ExternalMemory.cpp  Fence.cpp  Framebuffer.cpp  GraphicsPipeline.cpp  Image.cpp  ImageAttachment.cpp  ImageTarget.cpp  Instance.cpp  MemoryAllocator.cpp  OffscreenFramebuffer.cpp  PipelineLayout.cpp  Queue.cpp  RenderPass.cpp  RenderTarget.cpp  Renderer.cpp  Semaphore.cpp  Shader.cpp  Subpass.cpp  Swapchain.cpp  Texture.cpp  Util.cpp  composite.frag  composite.frag.spv.h  composite.vert  (+1 more)
bpMulti/example/: CMakeLists.txt
bpMulti/example/src/: CameraController.h  MainRenderer.cpp  MainRenderer.h  MainWindow.cpp  MainWindow.h  main.cpp
bpMulti/include/bpMulti/: CompositingDrawable.h  Compositor.h  Contribution.h  DeviceToHostStep.h  HostCopyStep.h  HostToDeviceStep.h  PipelineStep.h  RenderDeviceSteps.h  RenderStep.h  Renderer.h  SortFirstCompositor.h  SortFirstRenderer.h  SortLastCompositor.h  SortLastRenderer.h
bpMulti/src/: Compositor.cpp  Contribution.cpp  DeviceToHostStep.cpp  HostCopyStep.cpp  HostToDeviceStep.cpp  RenderDeviceSteps.cpp  RenderStep.cpp  Renderer.cpp  SortFirstCompositingSpv.inc  SortFirstCompositor.cpp  SortFirstRenderer.cpp  SortLastCompositingSpv.inc  SortLastCompositor.cpp
bpQt/include/bpQt/: DeviceQuery.h  Window.h
bpQt/src/: DeviceQuery.cpp  Window.cpp
bpScene/include/bpScene/: Camera.h  Drawable.h  DrawableSubpass.h  Material.h  MaterialResources.h  Math.h  Mesh.h  MeshDrawable.h  MeshResources.h  Model.h  ModelDrawable.h  ModelResources.h  Node.h  PushConstantResource.h  ResourceList.h  Vertex.h
bpScene/src/: DrawableSubpass.cpp  Material.cpp  MaterialResources.cpp  Math.cpp  Mesh.cpp  MeshDrawable.cpp  MeshResources.cpp  Model.cpp  ModelDrawable.cpp  ModelResources.cpp  Node.cpp  PushConstantResource.cpp
bpUtil/include/bpUtil/: AsyncQueue.h  Event.h  FlagSet.h  Semaphore.h
bpView/include/bpView/: Window.h  bpView.h
bpView/src/: Window.cpp  bpView.cpp
include/bp/: bitmask_operators.h  bp.h  buffer.h  device.h  ed.h  image.h  swapchain.h  vk_includes.h  window.h
src/: buffer.cpp  device.cpp  event_handling.cpp  image.cpp  init.cpp  swapchain.cpp  window.cpp
